--- a/index.html
+++ b/index.html
@@ -34,17 +34,19 @@
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    const serviceWorkerVersion = "1742536673";
+    const serviceWorkerVersion = "3094813901";
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
 </head>
 <body>
   <script>
-      window.addEventListener('beforeinstallprompt', function (e) {
-        e.preventDefault();
-        return false;
+    window.addEventListener('beforeinstallprompt', function (e) {
+      e.preventDefault();
+      return false;
     });
+  </script>
+  <script>
     window.addEventListener('load', function(ev) {
       // Download main.dart.js
       _flutter.loader.loadEntrypoint({
